--- a/css/style.css
+++ b/css/style.css
@@ -870,6 +870,7 @@ p.copyrights-text {
     width: 100%;
     align-items: center;
     justify-content: center;
+    gap: 16px;
 }
 
 .facebook-link a {
