--- a/css/style.css
+++ b/css/style.css
@@ -894,14 +894,27 @@ p.copyrights-text {
 .stay-update-section{
     width: 100%;
     padding: 90px 0;
-    background-image: url("../images/form-bg.png");
+    background-image: url("../images/form-bg.webp");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
+}
+
+.stay-update-section::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .stay-update-section .container {
     max-width: 820px;
+    position: relative;
+    z-index: 1;
 }
 
 .stay-update-row {
@@ -1284,6 +1297,18 @@ button.mobile-menu-btn {
     width: 100%;
     display: flex;
     min-height: 400px;
+    position: relative;
+    max-height: 700px;
+}
+
+.full-image::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .full-image img{
